<?xml version="1.0" encoding="UTF-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <ScrollView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="12dp"
            android:paddingTop="4dp"
            android:paddingEnd="12dp"
            android:paddingBottom="12dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="-12dp"
                android:text="@string/address"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="12sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="https://"
                    android:inputType="textUri"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:textSize="16sp"
                    tools:ignore="Autofill,HardcodedText" />

                <ImageView
                    android:id="@+id/address_mirror"
                    android:layout_width="36dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:background="?android:attr/actionBarItemBackground"
                    android:scaleType="center"
                    android:src="@drawable/ic_arrow_down"
                    android:tint="?android:attr/textColorSecondary"
                    android:tintMode="src_in"
                    android:visibility="gone"
                    tools:ignore="ContentDescription" />

            </FrameLayout>

            <TextView
                android:id="@+id/address_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="-2dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:textColor="?attr/colorError"
                android:textSize="12sp"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="-12dp"
                android:text="@string/fingerprint"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/fingerprint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:gravity="top"
                android:inputType="textNoSuggestions|textMultiLine"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:textSize="16sp"
                tools:ignore="Autofill,LabelFor" />

            <TextView
                android:id="@+id/fingerprint_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="-2dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:textColor="?attr/colorError"
                android:textSize="12sp"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="-12dp"
                android:text="@string/username"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="textNoSuggestions"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:textSize="16sp"
                tools:ignore="Autofill,LabelFor" />

            <TextView
                android:id="@+id/username_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="-2dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:textColor="?attr/colorError"
                android:textSize="12sp"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="-12dp"
                android:text="@string/password"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:textSize="16sp"
                tools:ignore="Autofill,LabelFor" />

            <TextView
                android:id="@+id/password_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="-2dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:textColor="?attr/colorError"
                android:textSize="12sp"
                android:visibility="gone" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/colorBackground"
        android:clickable="true"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="KeyboardInaccessibleWidget">

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/checking_repository"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="20sp" />

        <Button
            android:id="@+id/skip"
            style="@android:style/Widget.Material.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/skip" />

    </LinearLayout>

</FrameLayout>
