<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="12dp"
    android:layout_marginVertical="4dp"
    android:background="@drawable/background_border"
    android:backgroundTint="?attr/colorSurface"
    android:gravity="center"
    android:orientation="horizontal">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/sdk_block"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/target"
            android:textColor="?android:textColorPrimary"
            android:textSize="14sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/sdk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:textColor="?android:textColor"
            android:textSize="16sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider1"
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:layout_marginVertical="12dp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/version_block"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="14sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:textColor="?android:attr/textColor"
            android:textSize="16sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider2"
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:layout_marginVertical="12dp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/size_block"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size"
            android:textColor="?android:textColorPrimary"
            android:textSize="14sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:textColor="?android:textColor"
            android:textSize="16sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider3"
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:layout_marginVertical="12dp" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/dev_block"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:layout_weight="1"
        app:cardBackgroundColor="?attr/colorSurface"
        app:cardCornerRadius="@dimen/shape_medium_corner"
        app:cardElevation="0dp"
        app:strokeWidth="0dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/divider3"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/dev_icon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:shapeAppearanceOverlay="@style/Shape.Small"
                app:srcCompat="@drawable/ic_code" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/dev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:singleLine="true"
                android:textColor="?android:textColor"
                android:textSize="12sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.card.MaterialCardView>
</androidx.appcompat.widget.LinearLayoutCompat>